:bug: Fix scrollbar issue on mobile

--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -13,10 +13,10 @@
 }
 
 div.body {
-  height: 100vh;
+  height: calc(100vh - 4rem);
+  overflow: auto;
 
   main {
-    height: calc(100vh - 1.34rem - 4rem);
     margin: 0px auto;
     max-width: var(--application-width);
     padding: 0.67rem 0px;
